<resources>
    <string name="app_name">MyCoinTong</string>
    <string name="action_edit_coin_list">Edit List</string>
    <string name="action_refresh">Refresh</string>
    <string name="title_activity_setting">Edit Coin List</string>
    <string name="title_activity_holding">Holdings</string>
    <string name="title_activity_add">Add Coins</string>
    <string name="add">Add</string>
    <string name="cancel">Cancel</string>
    <string name="confirm">Confirm</string>
    <string name="avg_price">Avg Price :</string>
    <string name="quantity">Quantity :</string>
    <string name="up">Up</string>
    <string name="down">Down</string>
    <string name="delete">Delete</string>
    <string name="revenue_krw">Revenue(KRW)</string>
    <string name="balance_krw">Balance(KRW)</string>
    <string name="balance_jpy">Balance(JPY)</string>
    <string name="balance_usd">Balance(USD)</string>
    <string name="balance_cny">Balance(CNY)</string>
    <string name="revenue_cny">Revenue(CNY)</string>
    <string name="revenue_jpy">Revenue(JPY)</string>
    <string name="revenue_usd">Revenue(USD)</string>
    <string name="msg_all_coin_already_added">All available coins are in the interesting coin list.</string>
    <string name="msg_insert_avg_price_and_quantity">Please insert your average price and quantity.</string>
    <string name="msg_checking_exchange_rate">Checking exchange rate...</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_useful_sites">Useful Sites</string>
    <string name="nav_kimpro">Korea Premium</string>
    <string name="nav_coinmarketcap">CoinMarketCap</string>
    <string name="nav_clien">Clien</string>
    <string name="nav_coinpan">Coinpan</string>
    <string name="nav_exchange_rate">Exchange Rate</string>
    <string name="nav_update_exchange_rate">Update</string>
</resources>
